@@ -68,7 +68,7 @@ EOW
     }
 
 
-    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v6.009.
+    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v6.010.
     use strict;
     use warnings;
 
@@ -89,7 +89,7 @@ EOW
       "module_name" => "Minion::Backend::SQLite",
       "recursive_test_files" => 1,
       "requires" => {
-        "Minion" => "7.01",
+        "Minion" => "7.04",
         "Mojo::SQLite" => "3.000",
         "Mojolicious" => "7.29",
         "Sys::Hostname" => 0,
