@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Add id option to dequeue method to support dequeueing a specific job.
 
 2.001     2017-07-20 02:40:46 EDT
   - Bump Mojo::SQLite requirement to 3.000 to support sharing the database
